--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "test-project",
+  "name": "vue-vixens-mini-2-test",
   "version": "1.0.0",
   "description": "A Vue.js project",
   "main": "src/main.js",
@@ -13,7 +13,9 @@
     "build": "node build/build.js"
   },
   "dependencies": {
-    "vue": "^2.5.2"
+    "axios": "0.18.0",
+    "vue": "^2.5.2",
+    "vuetify": "1.2.3"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
@@ -74,5 +76,6 @@
     "> 1%",
     "last 2 versions",
     "not ie <= 8"
-  ]
+  ],
+  "keywords": []
 }
